--- a/src/Doublel.UseCases/Doublel.UseCases.csproj
+++ b/src/Doublel.UseCases/Doublel.UseCases.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>Doublel.UseCases</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <Authors>Luka Lukić</Authors>
     <Company>Olymo</Company>
     <Description>
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
